# transp-gfs

./: .gitignore  CALMET.INP  README.md  config_era5_example.yaml  config_example.yaml  config_qatar.yaml  environment.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
CALMET_v6.5.0_L150223/: AUXDAT.MET  AUXUTILS.FOR  AUXVAR.MET  CALMET.FOR  CALUTILS.FOR  COORDLIB.FOR  IGF.MET  MET1.MET  MM4HDO.MET  OUTPT.MET  PARAMS.MET  QA.MET  UPMET.MET  ZIPARM.MET  cpl.bat  cpl.txt
CALWRF_v2.0.3_L190426/: readme.txt
CALWRF_v2.0.3_L190426/code/: calwrf.cm2  calwrf.f  calwrf.par  compile.bat
MMIF4.1.1/: README.txt  aggregate.f90  avg_zface.f90  cloud_cover.f90  compile_mmif_windows.sh  compile_netcdf_windows.sh  functions.f90  interpolate.f90  landuse.f90  makefile  makefile.linux  makefile.windows  met_fields.f90  mmif.f90  mmif_change_log.txt  module_llxy.f90  output_aercoare.f90  output_aermet.f90  output_calmet.f90  output_onsite.f90  output_scichem.f90  parse_control.f90  pasquill_gifford.f90  pbl_height.f90  read_mm5.f90  read_wrf.f90  sfc_layer.f90  timesubs.f90  wrf_netcdf.f90
met_validation/output/: report.md  stats_combined.csv
met_validation/scripts/: intercompare.py
scripts/: check_era5_grib.py  run_qatar.sh  scan_3ddat.py  setup_ubuntu.sh
src/gfs2calmet/: __init__.py  __main__.py  cli.py  config.py  dataset.py  era5_cli.py  era5_fields.py  era5_reader.py  (+6 more)
tests/: conftest.py  test_cli.py  test_config.py  test_era5_cli.py  test_fortran_format.py  test_frames.py  test_gfs_fields.py  test_gfs_reader.py  test_regrid.py  test_writer_3ddat.py
